--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ a, img {
 <body style="background-image:url(bg.jpg);background-size:cover;background-size:cover;">    
 
 <div class="childbox">
-  <a href="mailto:hello@hype.ph"><img src="logo.png" width="100%" border="0"></a>
+  <a href="mailto:bongcapina@gmail.com"><img src="logo.png" width="100%" border="0"></a>
 </div>
 
 </body>
