--- a/folio/about.html
+++ b/folio/about.html
@@ -6,7 +6,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">	
 
-		<title>Bong ― UX Designer</title>	
+		<title>Ferdinand Capiña ― UX Designer</title>	
 
 		<meta name="keywords" content="Hype.ph" />
 		<meta name="description" content="Hi, I'm Bong ― UX Designer">
