--- a/folio/index.html
+++ b/folio/index.html
@@ -74,7 +74,7 @@
 								</a>
 							</div>
 						</div>
-						<div class="header-column w-100 pl-lg-5">
+						<div class="header-column w-100 pl-lg-5" style="margin-left: 5%; margin-right: 0;margin-top:10px">
 							<div class="header-nav w-100 p-0">
 								<a href="https://www.linkedin.com/in/bongcapina/">linkedin.com/in/bongcapina</a>
 								
