--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 								<span class="thumb-info-wrapper">
 									<img src="2023/Duasarace.png" class="img-fluid" alt="">
 									<span class="thumb-info-title bg-transparent p-4 ml-3">
-										<span class="thumb-info-inner line-height-1 text-4 font-weight-bold">Duasarace</span>
+										<span class="thumb-info-inner line-height-1 text-4 font-weight-bold">Duas Arace</span>
 										<span class="thumb-info-type opacity-6">Website</span>	
 								</span>
 							</span>
@@ -174,7 +174,7 @@
 							<div class="modal-body">
 								<img src="2023/Duasarace2.png"class="img-fluid" alt="">
 
-								<h1 class="modal-title mb-3 font-weight-extra-bold" id="defaultModalLabel" style="margin-top:30px;">Duasarace</h1>
+								<h1 class="modal-title mb-3 font-weight-extra-bold" id="defaultModalLabel" style="margin-top:30px;">Duas Arace</h1>
 								
 								<p>My goal was to improve the quality of information available to clients on the Duarace website to provide more relevant information. As a result, Duasarace's products and services would be more trustworthy and dependable.
 								</p>
