--- a/index.html
+++ b/index.html
@@ -699,7 +699,7 @@
 							<div class="modal-body" style="margin:25px;margin-top:0;">
 								<img src="2020/queue3.jpg" class="img-fluid" alt="">
 								
-								<h1 class="modal-title mb-3 font-weight-extra-bold" id="defaultModalLabel" style="margin-top:30px;">FamilyDOC Queue & Vitals</h1>
+								<h1 class="modal-title mb-3 font-weight-extra-bold" id="defaultModalLabel" style="margin-top:30px;">FamilyDOC</h1>
 								<p>While working at AC Health as a UX designer, I developed an app that automatically queues vitals for patients and nurses to process quickly.</p>
 								<p style="margin-bottom:0;">
 									<a href="https://www.figma.com/file/BOLwMLzefRkeuH24f6bkoPhL/FamilyDoc-Queue-App" target="_default"><button type="button" class="mb-1 mt-1 mr-1 btn btn-light" ><img src="2020/figma.png" style="height:20px;margin-left:5px;margin-right: 10px;"></i> View Figma Prototype</button></a>
