--- a/index.html
+++ b/index.html
@@ -743,7 +743,7 @@
 								<h1 class="modal-title mb-3 font-weight-extra-bold" id="defaultModalLabel" style="margin-top:30px;">Vigos Health</h1>
 								<p>As a UX Designer at Vigos Health, I develop the Vigos Health website. Designing, coding, and showing off projects were my responsibilities.</p>
 								<p style="margin-bottom:0;">
-									<a href="https://vigoshealth.com/" target="_default"><button type="button" class="mb-1 mt-1 mr-1 btn btn-light" ><img src="2023/www.png" style="height:20px;margin-left:5px;margin-right: 10px;"></i> Visit VigosHealth.Com</button></a>
+									<a href="https://www.vigoshealth.com/" target="_default"><button type="button" class="mb-1 mt-1 mr-1 btn btn-light" ><img src="2023/www.png" style="height:20px;margin-left:5px;margin-right: 10px;"></i> Visit VigosHealth.Com</button></a>
 
 								</p>
 							</div>
