--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 								<p>Currently, my role at MockDo is to design experiences that simplify complex user interfaces. It includes reimagining how users interact with meeting setup and timeline flows of the MockDo app console, as well as fullscreen mode flows. The following are a few examples of my work where I was responsible for research and design.
 								</p>
 								<p style="margin-bottom:0;">
-								<a href="https://shrtco.de/apTqT2" target="_default"><button type="button" class="mb-1 mt-1 mr-1 btn btn-light" ><img src="2020/figma.png" style="height:20px;margin-left:5px;margin-right: 10px;"></i> View Figma Prototype</button></a>
+								<a href="https://www.figma.com/file/KZv1OyztcPY7zFYkwRZXcL/HYPE.PH---MockDo?type=design&mode=design&t=ptMMMdm0ONbCa63P-1" target="_default"><button type="button" class="mb-1 mt-1 mr-1 btn btn-light" ><img src="2020/figma.png" style="height:20px;margin-left:5px;margin-right: 10px;"></i> View Figma Prototype</button></a>
 
 								</p>
 							</div>
@@ -776,7 +776,7 @@
 								<img src="2023/WebDesign.png"class="img-fluid" alt="">
 
 								<h1 class="modal-title mb-3 font-weight-extra-bold" id="defaultModalLabel" style="margin-top:30px;">Web Design</h1>
-								<p>Coming Soon!
+								<p>A collection of my previous works will be posted, stay tuned.
 								</p>
 								
 							</div>
@@ -809,7 +809,7 @@
 								<img src="2023/DigitalDesign.png"class="img-fluid" alt="">
 
 								<h1 class="modal-title mb-3 font-weight-extra-bold" id="defaultModalLabel" style="margin-top:30px;">Print & Digital Design</h1>
-								<p>Coming Soon!
+								<p>A collection of my previous works will be posted, stay tuned.
 								</p>
 							</div>
 						</div>
