--- a/index.html
+++ b/index.html
@@ -88,7 +88,6 @@
 
 
 		<div role="main" class="main position-relative z-index-2 z-index-mobile-0">
-
 			<section class="section section-height-1 border-0 m-0 appear-animation" data-appear-animation="fadeIn" data-appear-animation-delay="200" style="background-image: url(); background-size: cover; background-position: center;background-color:#000033">
 				<div class="container py-5 my-5">
 					<div class="row">
@@ -112,9 +111,7 @@
 
 
 		<div class="m-0 p-0">
-			<div class="row">
-
-				
+			<div class="row" style="background-color:#000033">			
 				
 
 
