--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">	
 
-		<title>Bong Capiña ― UX Designer</title>	
+		<title>Bong Capiña ― UX/UI Designer</title>	
 
 		<meta name="keywords" content="Hype.ph" />
 		<meta name="description" content="Hi, I'm Bong ― UX Designer">
