--- a/index.html
+++ b/index.html
@@ -97,10 +97,12 @@
 						  <line class="stroke-3" x1="40" x2="80" y1="100" y2="100" />
 						  </svg>
 
-						  <h1 class="font-weight-extra-bold text-color-light text-13 line-height-2 negative-ls-2 d-none d-lg-block">Hi, I'm Bong ― UX Designer</h1> 
-						  <h1 class="font-weight-extra-bold text-color-light text-13 line-height-2 negative-ls-2 d-md-block d-sm-block d-lg-none">Hi, I'm Bong<br />― UX Designer</h1> 
+						  <h1 class="font-weight-extra-bold text-color-light text-13 line-height-2 negative-ls-2 d-none d-lg-block">Hi, I'm Bong ― UX/UI Designer</h1> 
+						  <h1 class="font-weight-extra-bold text-color-light text-13 line-height-2 negative-ls-2 d-md-block d-sm-block d-lg-none">Hi, I'm Bong<br />― UX/UI Designer</h1> 
 
-						  <h4 class="text-color-light"4>A passionate and versatile UX designer who has more than a decade of experience in user experience, visual, and interaction design. Take a look at some conceptual work and case studies below.</h4>
+						  <h4 class="text-color-light"4>A passionate and versatile UX/UI designer who has more than a decade of experience in user experience, visual, and interaction design. My expertise includes web & mobile application design, branding, and print design.<br /><br />
+							The majority of my work is doing MVP designs and platform redesigns for local and international companies.<br /><br />
+							Take a look at some conceptual work and case studies below.</h4>
 							
 						</div>
 					</div>
