--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<title>Bong Capiña ― UX/UI Designer</title>	
 
 		<meta name="keywords" content="Hype.ph" />
-		<meta name="description" content="Hi, I'm Bong ― UX Designer">
+		<meta name="description" content="Bong Capiña ― UX/UI Designer">
 		<meta name="author" content="okler.net">
 
 		<!-- Favicon -->
@@ -99,10 +99,10 @@
 
 						  <h1 class="font-weight-extra-bold text-color-light text-13 line-height-2 negative-ls-2 d-none d-lg-block">Hi, I'm Bong ― UX/UI Designer</h1> 
 						  <h1 class="font-weight-extra-bold text-color-light text-13 line-height-2 negative-ls-2 d-md-block d-sm-block d-lg-none">Hi, I'm Bong<br />― UX/UI Designer</h1> 
-
-						  <h4 class="text-color-light"4>I’m a passionate and versatile UX/UI designer focusing on user experience, visual, and interaction design — with over a decade of experience. My expertise includes web & mobile application design, branding, and print design.<br /><br />
+						  <h4 class="text-color-light"4>With 15+ years in web and mobile app design, I specialize in creating intuitive EMR systems, SaaS platforms, MVPs, and dashboards, and excel at executing impactful platform redesigns with a proven record of success</h4>
+						  <!--<h4 class="text-color-light"4>I’m a passionate and versatile UX/UI designer focusing on user experience, visual, and interaction design — with over a decade of experience. My expertise includes web & mobile application design, branding, and print design.<br /><br />
 							The majority of my work is doing MVP designs and platform redesigns for local and international companies.
-							Take a look at some conceptual work and case studies below.</h4>
+							Take a look at some conceptual work and case studies below.</h4>-->
 							
 						</div>
 					</div>
